--- a/public/assets/css/bootstrap-extended.css
+++ b/public/assets/css/bootstrap-extended.css
@@ -33,7 +33,7 @@
 /* Background Colors */
 
 .bg-primary {
-    background-color: #923eb9!important;
+    background-color: #ffc603!important;
 }
 
 .bg-danger {
@@ -189,7 +189,7 @@
 /* Text Colors */
 
 .text-primary {
-    color: #923eb9!important;
+    color: #ffc603!important;
 }
 
 .text-danger {
@@ -253,7 +253,7 @@
 /* Borders */
 
 .border-primary {
-    border-color: #923eb9!important;
+    border-color: #ffc603!important;
 }
 
 .border-danger {
@@ -314,8 +314,8 @@
 
 .btn-primary {
 	--bs-btn-color: #fff;
-	--bs-btn-bg: #923eb9;
-	--bs-btn-border-color: #923eb9;
+	--bs-btn-bg: #ffc603;
+	--bs-btn-border-color: #ffc603;
 	--bs-btn-hover-color: #fff;
 	--bs-btn-hover-bg: #8436a8;
 	--bs-btn-hover-border-color: #8436a8;
@@ -325,32 +325,32 @@
 	--bs-btn-active-border-color: #8436a8;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 	--bs-btn-disabled-color: #fff;
-	--bs-btn-disabled-bg: #923eb9;
-	--bs-btn-disabled-border-color: #923eb9
+	--bs-btn-disabled-bg: #ffc603;
+	--bs-btn-disabled-border-color: #ffc603
 }
 
 .btn-outline-primary {
-	--bs-btn-color: #923eb9;
-	--bs-btn-border-color: #923eb9;
+	--bs-btn-color: #ffc603;
+	--bs-btn-border-color: #ffc603;
 	--bs-btn-hover-color: #fff;
-	--bs-btn-hover-bg: #923eb9;
-	--bs-btn-hover-border-color: #923eb9;
+	--bs-btn-hover-bg: #ffc603;
+	--bs-btn-hover-border-color: #ffc603;
 	--bs-btn-focus-shadow-rgb: 13, 110, 253;
 	--bs-btn-active-color: #fff;
-	--bs-btn-active-bg: #923eb9;
-	--bs-btn-active-border-color: #923eb9;
+	--bs-btn-active-bg: #ffc603;
+	--bs-btn-active-border-color: #ffc603;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-	--bs-btn-disabled-color: #923eb9;
+	--bs-btn-disabled-color: #ffc603;
 	--bs-btn-disabled-bg: transparent;
-	--bs-btn-disabled-border-color: #923eb9;
+	--bs-btn-disabled-border-color: #ffc603;
 	--bs-gradient: none
 }
 
 /* 
 .btn-primary {
 	color: #fff;
-	background-color: #923eb9;
-	border-color: #923eb9
+	background-color: #ffc603;
+	border-color: #ffc603
 }
 .btn-primary:hover {
 	color: #fff;
@@ -373,8 +373,8 @@
 }
 .btn-primary.disabled, .btn-primary:disabled {
 	color: #fff;
-	background-color: #923eb9;
-	border-color: #923eb9
+	background-color: #ffc603;
+	border-color: #ffc603
 } */
 
 
@@ -583,27 +583,27 @@
 	border-color: #212529
 }
 .btn-outline-primary {
-	color: #923eb9;
-	border-color: #923eb9
+	color: #ffc603;
+	border-color: #ffc603
 }
 .btn-outline-primary:hover {
 	color: #fff;
-	background-color: #923eb9;
-	border-color: #923eb9
+	background-color: #ffc603;
+	border-color: #ffc603
 }
 .btn-check:focus+.btn-outline-primary, .btn-outline-primary:focus {
 	box-shadow: 0 0 0 .25rem rgb(84, 55, 145 , 0.5)
 }
 .btn-check:active+.btn-outline-primary, .btn-check:checked+.btn-outline-primary, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show, .btn-outline-primary:active {
 	color: #fff;
-	background-color: #923eb9;
-	border-color: #923eb9
+	background-color: #ffc603;
+	border-color: #ffc603
 }
 .btn-check:active+.btn-outline-primary:focus, .btn-check:checked+.btn-outline-primary:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus, .btn-outline-primary:active:focus {
 	box-shadow: 0 0 0 .25rem rgba(84, 55, 145 , 0.5)
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-	color: #923eb9;
+	color: #ffc603;
 	background-color: transparent
 }
 .btn-outline-secondary {
@@ -776,7 +776,7 @@
 }
 .btn-link {
 	font-weight: 400;
-	color: #923eb9;
+	color: #ffc603;
 	text-decoration: underline
 }
 .btn-link:hover {
@@ -872,11 +872,11 @@
 
 .page-link:hover,
 .page-link {
-	color: #923eb9;
+	color: #ffc603;
 }
 
 .page-link:focus {
-	color: #923eb9;
+	color: #ffc603;
 	border-color: #c27be4;
     box-shadow: 0 0 0 .25rem rgba(146, 62, 185, 0.3)
 }
@@ -885,8 +885,8 @@
 .page-link.active,
 .page-link.active:hover {
 	color: #fff;
-	background-color:#923eb9;
-    border-color:#923eb9;
+	background-color:#ffc603;
+    border-color:#ffc603;
 }
 
 
@@ -897,11 +897,11 @@
 	box-shadow: 0 0 0 .25rem rgba(146, 62, 185, 0.25);
 }
 .form-check-input:checked {
-	background-color: #923eb9;
-	border-color: #923eb9;
+	background-color: #ffc603;
+	border-color: #ffc603;
 }
 
 .form-check-input[type=checkbox]:indeterminate {
-	background-color: #923eb9;
-	border-color: #923eb9;
+	background-color: #ffc603;
+	border-color: #ffc603;
 }
